# flake8-if-statements

./: .bumpversion.cfg  README.md  makefile  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pythonpackage.yml  pythonpublish.yml
flake8_if_statements/: errors.py  plugin.py  visitor.py
tests/: test_if_statement_plugin.py  test_if_statement_visitor.py
