[tool.poetry]
name = "flake8-if-statements"
version = "1.0.0"
description = "Flake8 linter for if statements"
authors = ["David S <d1618033@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/d1618033/flake8-if-statements"
homepage = "https://pypi.org/project/flake8-if-statements"
keywords = []

[tool.poetry.plugins."flake8.extension"]
IFS = 'flake8_if_statements.plugin:IfStatementsPlugin'

[tool.poetry.dependencies]
python = "^3.7"
flake8-plugin-utils = "^1.2.0"
astor = "^0.8.1"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allow-prereleases = true}
bumpversion = "^0.5.3"
flake8-awesome = "^1.0"
mypy = "^0.660.0"
pylint = "^2.2"
pytest = "^3.0"
pytest-cov = "^2.6"
pytest-deadfixtures = "^2.1"
pytest-mock = "^1.10"
unify = "^0.4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
